After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679165 - qtdemux: fix memleak
qtdemux: fix memleak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 0.10.32
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-29 22:21 UTC by Nicola
Modified: 2012-06-30 18:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix memleak (686 bytes, patch)
2012-06-29 22:21 UTC, Nicola
committed Details | Review

Description Nicola 2012-06-29 22:21:25 UTC
Created attachment 217677 [details] [review]
fix memleak

patch attached
Comment 1 Tim-Philipp Müller 2012-06-30 18:35:55 UTC
commit 064a740a9647617811f03b5695d868fb0bfa367c
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Sat Jun 30 00:19:38 2012 +0200

    qtdemux: fix memleak when parsing RIFF-style audio track headers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=679165