qtdemux: fix memleak when parsing RIFF-style audio track headers

https://bugzilla.gnome.org/show_bug.cgi?id=679165