gst/isomp4/qtdemux.c
@@ -7211,6 +7211,7 @@ qtdemux_parse_trak (GstQTDemux * qtdemux, GNode * trak)
 
                 if (extra)
                   gst_buffer_unref (extra);
+                g_free (header);
               }
             }
           } else
